--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2349,7 +2349,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rN4OsrbO3S .mbr-text {
-  color: #767676;
+  color: #cccccc;
 }
 .cid-rN4RIE1g4I {
   padding-top: 60px;
@@ -2375,7 +2375,8 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rN4RIE1g4I .mbr-text {
-  color: #767676;
+  color: #cccccc;
+  text-align: left;
 }
 .cid-rN4RJlQ4bs {
   padding-top: 60px;
@@ -2393,7 +2394,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rN4RJlQ4bs .mbr-text {
-  color: #767676;
+  color: #cccccc;
 }
 .cid-rN9PO9XVkN {
   padding-top: 60px;
@@ -2419,7 +2420,8 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rN9PO9XVkN .mbr-text {
-  color: #767676;
+  color: #cccccc;
+  text-align: left;
 }
 .cid-rN7kS8rspK {
   padding-top: 60px;
@@ -2611,7 +2613,8 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rN7uJ8cki1 .mbr-text {
-  color: #767676;
+  color: #cccccc;
+  text-align: left;
 }
 .cid-rKtioig2iR .navbar {
   background: #ffffff;
